added js and jquery

--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
     <!-- search button/ clear button on same line -->
     <!-- top articles is fed under -->
 
-
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://kit.fontawesome.com/d7b6144c64.js" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 
 </body>
 
